--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Öoo Map Viewer</title>
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <!-- <link rel="shortcut icon" href="./favicon.png" type="image/png"> -->
   <link rel="stylesheet" href="style.css">
 </head>
 
